--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,7 @@ services:
     image: timescale/timescaledb:latest-pg14
     networks:
       - timebenchnw
+    command: postgres -c shared_preload_libraries=pg_stat_statements,timescaledb -c pg_stat_statements.track=all -c max_connections=3000 -c track_activity_query_size=2048
     environment:
       POSTGRES_PASSWORD: password
     ports:
