--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,9 @@
 # Dependency directories (remove the comment below to include it)
 # vendor/
 
+# Another files
+.env
+
 ### Go Patch ###
 /vendor/
 /Godeps/
